# audio-converter

./: .gitignore  pyproject.toml
app/: main.py
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  page.tsx  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/: Waveform.tsx  clearButton.tsx  formatSelector.tsx  uploadButton.tsx  ytUrlInput.tsx
