[project]
name = "audiopod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "ffmpeg-asyncio>=0.1.3",
    "pyannote-audio[separation]>=3.3.2",
    "scipy>=1.16.0",
    "yt-dlp>=2025.6.30",
]
